<resources>
    <string name="app_name">EasyRect</string>
    <string name="easy_rectangle">Easy Rectangle</string>
    <string name="easy_rectangle_caption">Calculate with ease, measure with precision</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
</resources>