<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="42dp"
        app:srcCompat="@drawable/easy_rect_small" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/lexend_deca_semibold"
        android:text="@string/easy_rectangle"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/easy_rectangle_caption"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_deca_medium"
        android:labelFor="@id/edt_length"
        android:text="@string/length"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_length"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:inputType="numberDecimal"
        android:lines="1"
        android:outlineProvider="none"
        android:paddingStart="10dp"
        android:shadowRadius="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_deca_medium"
        android:labelFor="@id/edt_width"
        android:text="@string/width"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_width"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_deca_medium"
        android:labelFor="@id/edt_height"
        android:text="@string/height"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/sunBeamYellow"
        android:fontFamily="@font/lexend_deca_medium"
        android:shadowDx="0"
        android:text="@string/calculate"
        android:textSize="18sp"
        app:cornerRadius="12dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/lexend_deca_semibold"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>